// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component -> Popup should render the closed Popup UI without throwing an error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="popupstyles__Container-sc-s4yppy-0 elHvUq"
      >
        <div
          class="popupstyles__Lightbox-sc-s4yppy-1 hRyyrn"
          data-testid="popupLightbox"
        />
        <div
          class="popupstyles__Dialog-sc-s4yppy-2 cHtwSM"
        >
          <div
            class="popupstyles__Close-sc-s4yppy-5 hhCXdn"
            data-testid="popupClose"
          >
            X
          </div>
          <img
            alt="Popup Test"
            class="popupstyles__Landscape-sc-s4yppy-3 ijffxr"
            data-orientation="landscape"
            data-testid="popupImage"
            src="/about"
          />
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="popupstyles__Container-sc-s4yppy-0 elHvUq"
    >
      <div
        class="popupstyles__Lightbox-sc-s4yppy-1 hRyyrn"
        data-testid="popupLightbox"
      />
      <div
        class="popupstyles__Dialog-sc-s4yppy-2 cHtwSM"
      >
        <div
          class="popupstyles__Close-sc-s4yppy-5 hhCXdn"
          data-testid="popupClose"
        >
          X
        </div>
        <img
          alt="Popup Test"
          class="popupstyles__Landscape-sc-s4yppy-3 ijffxr"
          data-orientation="landscape"
          data-testid="popupImage"
          src="/about"
        />
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Component -> Popup should render the open Popup UI without throwing an error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="popupstyles__Container-sc-s4yppy-0 kQNgkc"
      >
        <div
          class="popupstyles__Lightbox-sc-s4yppy-1 hRyyrn"
          data-testid="popupLightbox"
        />
        <div
          class="popupstyles__Dialog-sc-s4yppy-2 cHtwSM"
        >
          <div
            class="popupstyles__Close-sc-s4yppy-5 hhCXdn"
            data-testid="popupClose"
          >
            X
          </div>
          <img
            alt="Popup Test"
            class="popupstyles__Landscape-sc-s4yppy-3 ijffxr"
            data-orientation="landscape"
            data-testid="popupImage"
            src="/about"
          />
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="popupstyles__Container-sc-s4yppy-0 kQNgkc"
    >
      <div
        class="popupstyles__Lightbox-sc-s4yppy-1 hRyyrn"
        data-testid="popupLightbox"
      />
      <div
        class="popupstyles__Dialog-sc-s4yppy-2 cHtwSM"
      >
        <div
          class="popupstyles__Close-sc-s4yppy-5 hhCXdn"
          data-testid="popupClose"
        >
          X
        </div>
        <img
          alt="Popup Test"
          class="popupstyles__Landscape-sc-s4yppy-3 ijffxr"
          data-orientation="landscape"
          data-testid="popupImage"
          src="/about"
        />
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
